--- a/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
+++ b/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
@@ -490,7 +490,12 @@ paths:
                 $ref: '#/components/schemas/Bank_info_response'
               examples:
                 bank_1:
-                  value: '{"bank_number":"2001","bank_name":"null","branch_number":"00720","transit_address":"null","account_number":"1234567 ","CAS-Returned-Messages":"0001 - Bank Number is Invalid."}'
+                  value: 
+                    bank_number:'2001'
+                    bank_name:'sa'
+                    branch_number:'00720'
+                    transit_address:'ds'
+                    account_number:'1234567'
         '400':
           description: BadRequest
           content:
