Added the yamls -tet4

--- a/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
+++ b/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
@@ -487,7 +487,7 @@ paths:
           content:
             application/json:
               examples:
-                account:
+                2001:
                   value:
                     bank_number: '2001'
                     bank_name: 'sa'
@@ -495,6 +495,14 @@ paths:
                     transit_address: 'ds'
                     account_number: '1234567'
                     CAS-Returned-Messages: '0001 - Bank Number is Invalid'
+                2002:
+                  value:
+                    bank_number: '2002'
+                    bank_name: 'sa'
+                    branch_number: '00720'
+                    transit_address: 'ds'
+                    account_number: '1234567'
+                    CAS-Returned-Messages: '0001 - Bank Number is Valids'
         '400':
           description: BadRequest
           content:
