--- a/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
+++ b/docs/docs/PayBC Mocking/paybc-1.0.0.yaml
@@ -487,15 +487,15 @@ paths:
           content:
             application/json:
               examples:
-                2001:
+                '2001':
                   value:
                     bank_number: '2001'
-                    bank_name: 'sa'
+                    bank_name: 'sawith'
                     branch_number: '00720'
                     transit_address: 'ds'
                     account_number: '1234567'
                     CAS-Returned-Messages: '0001 - Bank Number is Invalid'
-                2002:
+                '2002':
                   value:
                     bank_number: '2002'
                     bank_name: 'sa'
