--- a/jobs/ftp-poller/tests/docker/docker-compose.yml
+++ b/jobs/ftp-poller/tests/docker/docker-compose.yml
@@ -25,7 +25,8 @@ services:
   sftp:
     image: atmoz/sftp
     volumes:
-      - ./ftp/:/home/ftp_user/payment-folder/
+      - ./ftp/:/home/ftp_user/paymentfolder/
+      - ./ftp-backup:/home/ftp_user/backup/
     ports:
       - "2222:22"
     command: ftp_user:ftp_pass:1001
