--- a/queue_services/payment-reconciliations/requirements.txt
+++ b/queue_services/payment-reconciliations/requirements.txt
@@ -25,4 +25,4 @@ urllib3==1.26.2
 -e git+https://github.com/pwei1018/jaeger-client-python.git@186f14e14758273ed108508c0d388a4f4de5c75b#egg=jaeger-client
 -e git+https://github.com/bcgov/sbc-common-components.git#egg=sbc-common-components&subdirectory=python
 # -e git+https://github.com/bcgov/sbc-pay.git#egg=pay-api&subdirectory=pay-api
--e git+https://github.com/sumesh-aot/sbc-pay.git@nsf_reconciliations#egg=pay-api&subdirectory=pay-api
+-e git+https://github.com/saravanpa-aot/sbc-pay.git@nsf_reconciliations#egg=pay-api&subdirectory=pay-api
